--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -10,21 +10,36 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout">
 
         <EditText android:id="@+id/edit_message"
-            android:layout_weight="1"
+            android:layout_weight="1.83"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/additional_text" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/send_button_text" />
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/send_button_text"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignLeft="@+id/linearLayout"
+        android:layout_marginTop="30dp"
+        android:id="@+id/button"
+        android:onClick="triggerMoveText" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:text="You Said It:"
+        android:id="@+id/resultArea"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/button"
+        android:layout_alignLeft="@+id/button" />
 
 </RelativeLayout>
